--- a/banco-web/src/app/dashboard/dashboard-page/dashboard-page.component.html
+++ b/banco-web/src/app/dashboard/dashboard-page/dashboard-page.component.html
@@ -1,1 +1,31 @@
-<p>dashboard-page works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="/">Banco app</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        >
+        <a class="nav-link" routerLink="/dashboard" routerLinkActive="active"
+          >clientes</a
+        >
+        <a
+          class="nav-link"
+          routerLink="/dashboard/create/client"
+          routerLinkActive="active"
+          >Nuevo Cliente</a
+        >
+      </div>
+    </div>
+  </div>
+</nav>
+<router-outlet></router-outlet>
