--- a/banco-web/src/app/dashboard/clients-view/clients-view.component.html
+++ b/banco-web/src/app/dashboard/clients-view/clients-view.component.html
@@ -15,4 +15,7 @@
       >
     </div>
   </div>
+  <div class="w-100 fs-2" *ngIf="!clients">
+    No se ha encontrado clientes, cree uno nuevo
+  </div>
 </div>
