--- a/banco-web/src/app/dashboard/update-client/update-client.component.html
+++ b/banco-web/src/app/dashboard/update-client/update-client.component.html
@@ -1,5 +1,5 @@
-<form class="w-50 mb-5" [formGroup]="form" (ngSubmit)="send()">
-  <h1>Nuevo cliente</h1>
+<form class="w-50 mb-5" [formGroup]="form" (ngSubmit)="update()">
+  <h1>Actualizar cliente</h1>
   <div class="mb-3">
     <label class="form-label">Nombre</label>
     <input formControlName="name" type="text" class="form-control" />
